--- a/manifests/0000_50_olm_00-pprof-config.yaml
+++ b/manifests/0000_50_olm_00-pprof-config.yaml
@@ -3,6 +3,7 @@ kind: ConfigMap
 metadata:
   annotations:
     include.release.openshift.io/ibm-cloud-managed: "true"
+    include.release.openshift.io/hypershift: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
     release.openshift.io/create-only: "true"
     capability.openshift.io/name: "OperatorLifecycleManager"
