--- a/manifests/0000_50_olm_00-pprof-secret.yaml
+++ b/manifests/0000_50_olm_00-pprof-secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 metadata:
   annotations:
     include.release.openshift.io/ibm-cloud-managed: "true"
+    include.release.openshift.io/hypershift: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
     release.openshift.io/create-only: "true"
     openshift.io/owning-component: "Operator Framework / operator-lifecycle-manager"
