--- a/manifests/0000_50_olm_02-olmconfig.yaml
+++ b/manifests/0000_50_olm_02-olmconfig.yaml
@@ -5,5 +5,6 @@ metadata:
   annotations:
     release.openshift.io/create-only: "true"
     include.release.openshift.io/ibm-cloud-managed: "true"
+    include.release.openshift.io/hypershift: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
     capability.openshift.io/name: "OperatorLifecycleManager"
