--- a/manifests/0000_50_olm_06-psm-operator.service.yaml
+++ b/manifests/0000_50_olm_06-psm-operator.service.yaml
@@ -5,6 +5,7 @@ metadata:
     include.release.openshift.io/self-managed-high-availability: "true"
     service.alpha.openshift.io/serving-cert-secret-name: package-server-manager-serving-cert
     include.release.openshift.io/ibm-cloud-managed: "true"
+    include.release.openshift.io/hypershift: "true"
     capability.openshift.io/name: "OperatorLifecycleManager"
   name: package-server-manager-metrics
   namespace: openshift-operator-lifecycle-manager
