--- a/manifests/0000_50_olm_14-packageserver.subscription.removed.yaml
+++ b/manifests/0000_50_olm_14-packageserver.subscription.removed.yaml
@@ -6,5 +6,6 @@ metadata:
   annotations:
     release.openshift.io/delete: "true"
     include.release.openshift.io/ibm-cloud-managed: "true"
+    include.release.openshift.io/hypershift: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
     capability.openshift.io/name: "OperatorLifecycleManager"
