apply hypershift cluster-profile

--- a/pkg/manifests/csv.yaml
+++ b/pkg/manifests/csv.yaml
@@ -10,6 +10,7 @@ metadata:
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
     include.release.openshift.io/ibm-cloud-managed: "true"
+    include.release.openshift.io/hypershift: "true"
 spec:
   displayName: Package Server
   description: Represents an Operator package that is available from a given CatalogSource which will resolve to a ClusterServiceVersion.
