--- a/manifests/0000_50_olm_07-collect-profiles.cronjob.yaml
+++ b/manifests/0000_50_olm_07-collect-profiles.cronjob.yaml
@@ -5,6 +5,7 @@ metadata:
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/hypershift: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
+    release.openshift.io/delete: "true"
     capability.openshift.io/name: "OperatorLifecycleManager"
   name: collect-profiles
   namespace: openshift-operator-lifecycle-manager
