--- a/manifests/0000_50_olm_07-collect-profiles.cronjob.yaml
+++ b/manifests/0000_50_olm_07-collect-profiles.cronjob.yaml
@@ -52,6 +52,7 @@ spec:
                 requests:
                   cpu: 10m
                   memory: 80Mi
+              terminationMessagePolicy: FallbackToLogsOnError
           volumes:
             - name: config-volume
               configMap:
